WithdrawToken InstantPay Integration

--- a/app/src/main/res/layout/selectedpaymentmethodlistitem.xml
+++ b/app/src/main/res/layout/selectedpaymentmethodlistitem.xml
@@ -53,10 +53,17 @@
                 android:id="@+id/imgBankTick"
                 android:layout_width="@dimen/_20sdp"
                 android:layout_height="@dimen/_20sdp"
-                android:layout_marginRight="@dimen/_20sdp"
                 android:src="@drawable/ic_custom_tick"
                 android:visibility="gone"
                 app:tint="@color/primary_green" />
+
+            <ImageView
+                android:id="@+id/imgBankArrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_chevron_right"
+                android:visibility="visible" />
         </LinearLayout>
 
         <RelativeLayout
@@ -96,10 +103,19 @@
                 android:layout_height="@dimen/_20sdp"
                 android:layout_alignParentRight="true"
                 android:layout_gravity="right"
-                android:layout_marginRight="@dimen/_20sdp"
                 android:src="@drawable/ic_custom_tick"
                 android:visibility="gone"
                 app:tint="@color/primary_green" />
+
+            <ImageView
+                android:id="@+id/imgCardArrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="right"
+                android:src="@drawable/ic_chevron_right"
+                android:visibility="gone" />
         </RelativeLayout>
 
         <LinearLayout
