--- a/app/src/main/res/layout/activity_buy_token.xml
+++ b/app/src/main/res/layout/activity_buy_token.xml
@@ -231,11 +231,10 @@
                                 android:fontFamily="@font/opensans_bold"
                                 android:gravity="center_vertical|right"
                                 android:hint="0.00"
-                                android:ellipsize="end"
-                                android:textDirection="rtl"
                                 android:inputType="numberDecimal"
                                 android:maxLength="@string/maxlength"
                                 android:textColor="@color/primary_black"
+                                android:textCursorDrawable="@drawable/cursor_color"
                                 android:textSize="@dimen/_53ssp" />
 
                             <TextView
