--- a/app/src/main/res/layout/choosepaymentmethod.xml
+++ b/app/src/main/res/layout/choosepaymentmethod.xml
@@ -16,6 +16,7 @@
         android:background="@color/primary_green" />
 
     <TextView
+        android:id="@+id/tvHead"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/opensans_bold"
