--- a/app/src/main/res/layout/withdraw_pay_method.xml
+++ b/app/src/main/res/layout/withdraw_pay_method.xml
@@ -1,93 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/_20sdp"
-    >
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_x"
-        android:layout_marginTop="@dimen/_45sdp"
-        android:layout_marginBottom="@dimen/_14sdp"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/_16ssp"
-        android:text="Add Instant Pay"
-        android:fontFamily="@font/opensans_bold"
-        android:textColor="@color/black"
-        android:layout_marginBottom="@dimen/_35sdp"
-        />
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_notokenavail"
-        android:layout_gravity="center"
-        android:layout_marginBottom="@dimen/_24sdp"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="There is no payment method currently \nlinked to your account. Please follow one of\nthe prompts below to link an account."
-        android:textColor="@color/primary_black"
-        android:textSize="@dimen/_12ssp"
-        android:fontFamily="@font/opensans_regular"
-        android:layout_marginBottom="@dimen/_20sdp"
-        />
+    android:padding="@dimen/_20sdp">
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+        android:id="@+id/lyWPayClose"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginBottom="@dimen/_14sdp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_credit_card"
+            android:src="@drawable/ic_x" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tvPayHead"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_35sdp"
+        android:fontFamily="@font/opensans_bold"
+        android:text="Add Bank Account"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_16ssp" />
+
+    <ImageView
+        android:id="@+id/imgPayLogo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="@dimen/_24sdp"
+        android:src="@drawable/ic_add_bank" />
+
+    <TextView
+        android:id="@+id/tvPayMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_20sdp"
+        android:fontFamily="@font/opensans_regular"
+        android:text="There is no payment method currently linked to your account. Please follow one of the prompts below to link an account."
+        android:textColor="@color/primary_black"
+        android:textSize="@dimen/_12ssp" />
+
+    <LinearLayout
+        android:id="@+id/lyPayClick"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imgPayment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_27sdp"
-            android:layout_marginBottom="@dimen/_20sdp"
             android:layout_marginRight="@dimen/_12sdp"
-            />
+            android:layout_marginBottom="@dimen/_20sdp"
+            android:src="@drawable/ic_bank_account_active" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_marginRight="@dimen/_15sdp"
             android:layout_weight="1"
-            >
+            android:orientation="vertical">
+
             <TextView
+                android:id="@+id/tvPayMethod"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:text="Debit Card"
-                android:textSize="@dimen/_12ssp"
-                android:textColor="@color/black"
                 android:fontFamily="@font/opensans_semibold"
+                android:text="External Bank Account"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_12ssp" />
 
-                />
             <TextView
+                android:id="@+id/tvPayMMessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_20sdp"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_10ssp"
                 android:layout_marginTop="@dimen/_2sdp"
-                android:text="Visa or Mastercard debit cards"
-
-                />
+                android:layout_marginBottom="@dimen/_20sdp"
+                android:text="Can be used for making Coyni purchases or withdrawing funds."
+                android:textColor="@color/xdark_gray"
+                android:textSize="@dimen/_9ssp" />
         </LinearLayout>
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_chevron_right"
             android:layout_marginTop="@dimen/_28sdp"
             android:layout_marginBottom="@dimen/_30sdp"
-
-            />
-
-    </LinearLayout>
+            android:src="@drawable/ic_chevron_right" />
 
     </LinearLayout>
+
+</LinearLayout>
