--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -24,4 +24,15 @@
         <attr name="android:itemBackground" />
         <attr name="hideLineWhenFilled" format="boolean" />
     </declare-styleable>
+
+    <declare-styleable name="SwipeableRecyclerView">
+        <attr name="leftBgColor" format="color" />
+        <attr name="leftImage" format="reference" />
+        <attr name="leftText" format="string" />
+        <attr name="rightBgColor" format="color" />
+        <attr name="rightImage" format="reference" />
+        <attr name="rightText" format="string" />
+        <attr name="textColor" format="color" />
+        <attr name="textSize" format="dimension" />
+    </declare-styleable>
 </resources>
