Bug Fixes Login & Create Account

--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -195,6 +195,7 @@
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
                         android:fontFamily="@font/opensans_semibold"
                         android:hint="Email"
+                        android:importantForAutofill="no"
                         android:imeOptions="actionNext"
                         android:inputType="textEmailAddress|textNoSuggestions"
                         android:maxLines="1"
@@ -296,6 +297,7 @@
                             android:inputType="textPassword|textNoSuggestions"
                             android:longClickable="false"
                             android:maxLength="12"
+                            android:importantForAutofill="no"
                             android:padding="@dimen/_14sdp"
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                             android:singleLine="true"
@@ -403,6 +405,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:hint="Confirm Password"
                         android:imeOptions="actionDone"
+                        android:importantForAutofill="no"
                         android:inputType="textPassword|textNoSuggestions"
                         android:longClickable="false"
                         android:maxLength="12"
