WithdrawToken InstantPay Implementation

--- a/app/src/main/res/layout/activity_edit_card.xml
+++ b/app/src/main/res/layout/activity_edit_card.xml
@@ -388,7 +388,7 @@
                                 android:editable="false"
                                 android:focusable="false"
                                 android:fontFamily="@font/opensans_semibold"
-                                android:hint="CA"
+                                android:hint="State"
                                 android:imeOptions="actionNext"
                                 android:inputType="text|textNoSuggestions"
                                 android:longClickable="false"
