--- a/app/src/main/res/layout/activity_edit_email.xml
+++ b/app/src/main/res/layout/activity_edit_email.xml
@@ -66,14 +66,14 @@
                     android:clickable="false"
                     android:cursorVisible="false"
                     android:importantForAutofill="no"
-                    android:editable="false"
                     android:focusable="false"
+                    android:enabled="false"
                     android:fontFamily="@font/opensans_semibold"
                     android:hint="Current Email"
                     android:imeOptions="actionNext"
                     android:maxLines="1"
                     android:padding="@dimen/_14sdp"
-                    android:inputType="textEmailAddress"
+                    android:inputType="textVisiblePassword|textNoSuggestions"
                     android:singleLine="true"
                     android:textColor="@color/text_color"
                     android:textColorHint="@color/light_gray"
