--- a/app/src/main/res/layout/giftcard_item.xml
+++ b/app/src/main/res/layout/giftcard_item.xml
@@ -9,9 +9,7 @@
     <ImageView
         android:id="@+id/imgBrand"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:scaleType="fitXY"/>
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/brandNameTV"
