--- a/app/src/main/res/layout/buy_token_order_review.xml
+++ b/app/src/main/res/layout/buy_token_order_review.xml
@@ -41,6 +41,7 @@
             android:textSize="@dimen/_35ssp" />
 
         <TextView
+            android:id="@+id/tvCYN"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_3sdp"
@@ -58,6 +59,7 @@
         android:padding="@dimen/_10sdp">
 
         <TextView
+            android:id="@+id/tvPaymentHead"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.2"
@@ -134,6 +136,7 @@
         android:padding="@dimen/_10sdp">
 
         <TextView
+            android:id="@+id/tvPurchaseHead"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
