--- a/app/src/main/res/layout/add_note_layout.xml
+++ b/app/src/main/res/layout/add_note_layout.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/roundeddialog"
@@ -22,92 +21,66 @@
             android:background="@drawable/shape_green_round_rect" />
 
     </LinearLayout>
+
     <RelativeLayout
         android:id="@+id/layoutMessage"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_100sdp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="40dp"
-        android:background="@drawable/bg_message_radius"
-        android:layout_marginRight="15dp">
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/etlMessage"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:counterMaxLength="120"
-        app:counterEnabled="false"
-        app:hintEnabled="false"
-        app:counterTextColor="@color/primary_black">
-        <EditText
-            android:id="@+id/addNoteET"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_80sdp"
-            android:layout_gravity="center_vertical"
-            android:fontFamily="@font/opensans_semibold"
-            android:background="@null"
-            android:imeOptions="actionDone"
-            android:inputType="textMultiLine"
-            android:lineSpacingExtra="3dp"
-            android:gravity="top"
-            android:maxLength="120"
-            android:hint="Optional: Add Note (Maximum 120 characters)"
-            android:padding="15dp"
-            android:text=""
-            android:textColorHint="@color/text_grey_msg"
-            android:textColor="@color/primary_black"
-            android:textSize="@dimen/_11ssp" />
+        android:layout_marginRight="15dp"
+        android:background="@drawable/bg_message_radius">
 
-    </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/etlMessage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:counterEnabled="false"
+            app:counterMaxLength="120"
+            app:counterTextColor="@color/primary_black"
+            app:hintEnabled="false">
+
+            <EditText
+                android:id="@+id/addNoteET"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_80sdp"
+                android:layout_gravity="center_vertical"
+                android:background="@null"
+                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
+                android:fontFamily="@font/opensans_semibold"
+                android:gravity="top"
+                android:hint="Optional: Add Note (Maximum 120 characters)"
+                android:imeOptions="actionDone"
+                android:inputType="textMultiLine"
+                android:lineSpacingExtra="3dp"
+                android:maxLength="120"
+                android:padding="15dp"
+                android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                android:text=""
+                android:textColor="@color/primary_black"
+                android:textColorHint="@color/text_grey_msg"
+                android:textCursorDrawable="@drawable/cursor_color"
+                android:textIsSelectable="false"
+                android:textSize="@dimen/_11ssp" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
     </RelativeLayout>
 
-    <!--    <androidx.cardview.widget.CardView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="@dimen/_21sdp"-->
-<!--        android:layout_marginTop="@dimen/_14sdp"-->
-<!--        android:layout_marginEnd="@dimen/_21sdp"-->
-<!--        app:cardCornerRadius="@dimen/_10sdp">-->
-
-<!--        <com.google.android.material.textfield.TextInputLayout-->
-<!--            android:id="@+id/addnoteTIL"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:background="@color/et_bg_gray"-->
-<!--            android:outlineProvider="none"-->
-<!--            app:counterEnabled="true"-->
-<!--            app:counterMaxLength="120"-->
-<!--            app:hintTextColor="@color/primary_color">-->
-
-<!--            <com.google.android.material.textfield.TextInputEditText-->
-<!--                android:id="@+id/addNoteET"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="@dimen/_60sdp"-->
-<!--                android:fontFamily="@font/opensans_semibold"-->
-<!--                android:gravity="top"-->
-<!--                android:hint="Optional: Add Note (Maximum 120 characters)"-->
-<!--                android:imeOptions="actionDone"-->
-<!--                android:maxLength="120"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:textColorHint="@color/dark_color_bg"-->
-<!--                android:textCursorDrawable="@drawable/cursor_color_text"-->
-<!--                android:textSize="@dimen/_10ssp" />-->
-<!--        </com.google.android.material.textfield.TextInputLayout>-->
-<!--    </androidx.cardview.widget.CardView>-->
-
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_21sdp"
+        android:layout_marginTop="@dimen/_30sdp"
+        android:layout_marginEnd="@dimen/_21sdp"
+        android:layout_marginBottom="@dimen/_21sdp"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:id="@+id/cancelBtn"
-            android:layout_width="@dimen/_120sdp"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/_43sdp"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="@dimen/_21sdp"
-            android:layout_marginTop="@dimen/_30sdp"
+            android:layout_weight="1"
             android:background="@drawable/shape_green_round_rect_core"
             android:gravity="center"
             android:orientation="vertical">
@@ -124,15 +97,13 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/doneBtn"
-            android:layout_width="@dimen/_120sdp"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/_43sdp"
-            android:layout_alignParentRight="true"
-            android:layout_marginStart="@dimen/_21sdp"
-            android:layout_marginTop="@dimen/_30sdp"
-            android:layout_marginEnd="@dimen/_21sdp"
-            android:layout_marginBottom="@dimen/_21sdp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_weight="1"
             app:cardBackgroundColor="@color/primary_color"
-            app:cardCornerRadius="@dimen/_21sdp">
+            app:cardCornerRadius="@dimen/_21sdp"
+            app:cardElevation="0dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -145,5 +116,5 @@
         </androidx.cardview.widget.CardView>
 
 
-    </RelativeLayout>
+    </LinearLayout>
 </LinearLayout>
